--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
+jwt.public.key=classpath:app.pub
+jwt.private.key=classpath:app.key
+
 spring.application.name=simpletwitter
 
 spring.sql.init.mode=always
-spring.jpa.defer-datasource-initialization=true
+# spring.jpa.defer-datasource-initialization=true
 
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/mini-spring-twitter
